--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liefercando</title>
+
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <header></header>
+    <header>
+        <img class="d-none" src="assets/img/icons/logo_liefercando.png" alt="logo liefercando text">
+        <img src="assets/img/icons/logo_liefercando-no-txt.png" alt="logo liefercando">
+        <h2>Speisekarte</h2>
+        <img src="assets/img/icons/menu.svg" alt="hamburgermenu">
+    </header>
 
     <div>
         <aside></aside>
