--- a/index.html
+++ b/index.html
@@ -15,29 +15,39 @@
             <img class="d-none h_icon" src="assets/img/icons/logo_liefercando.png" alt="logo liefercando text">
             <!-- todo arrow orange -->
             <img class="icon_48" src="assets/img/icons/logo_liefercando-no-txt.png" alt="logo liefercando">
-            <h2 class="t-align">Speisekarte</h2>
+            <h3 class="t-align">Speisekarte</h2>
             <img class="icon_48" src="assets/img/icons/menu.svg" alt="hamburgermenu">
         </div>
 
         <div>
-            <img class="h_img" src="assets/img/pizza-rastaurant.jpg" alt="restaurant pizza flizza">
-            <div class="h_resturant">
-                <div class="h_rest_left">
-                    <h1>Pizza Flizza</h1>
-                    <div>
-                        <div>
-                            <img class="icon_20" src="assets/img/star-2-48.png" alt="star full">
-                            <img class="icon_20" src="assets/img/star-2-48.png" alt="star full">
-                            <img class="icon_20" src="assets/img/star-2-48.png" alt="star full">
-                            <img class="icon_20" src="assets/img/star-5-48.png" alt="star emty">
-                            <img class="icon_20" src="assets/img/star-5-48.png" alt="star emty">
-                        </div>
-                        <a>1.2k Bewertungen</a>
+            <img class="h_img" src="assets/img/pizza-rastaurant.jpg" alt="restaurant pizza">
+
+            <div class="h_restaurant">
+                <div class="h_restaurant_logo">
+                    <div class="icon_64">
+                        <img class="h_pizza-logo" src="assets/img/icons/logo_pizza-flizza.png" alt="restaurant pizza flizza">
                     </div>
                 </div>
-                <div class="h_res_right">
+            
+                <div class="h_resturant_card">
+                    <div class="h_rest_left">
+                        <h2>Pizza Flizza</h1>
+                        <div>
+                            <div>
+                                <img class="icon_20" src="assets/img/star-2-48.png" alt="star full">
+                                <img class="icon_20" src="assets/img/star-2-48.png" alt="star full">
+                                <img class="icon_20" src="assets/img/star-2-48.png" alt="star full">
+                                <img class="icon_20" src="assets/img/star-5-48.png" alt="star emty">
+                                <img class="icon_20" src="assets/img/star-5-48.png" alt="star emty">
+                            </div>
+                            <a>1.2k Bewertungen</a>
+                        </div>
+                    </div>
+
+                    <div class="h_res_right">
                     <a class="cicle_48"><img class="icon_24" src="assets/img/icons/info.svg" alt="info"></a>
                     <a class="cicle_48"><img class="icon_24" src="assets/img/icons/favorite.svg" alt="favorite"></a>
+                    </div>
                 </div>
             </div>
         </div>
