--- a/index.html
+++ b/index.html
@@ -14,14 +14,26 @@
         <div class="h_menu">
             <img class="d-none h_icon" src="assets/img/icons/logo_liefercando.png" alt="logo liefercando text">
             <!-- todo arrow orange -->
-            <img class="icon_48" src="assets/img/icons/logo_liefercando-no-txt.png" alt="logo liefercando">
-            <h3 class="t-align">Speisekarte</h2>
-            <img class="icon_48" src="assets/img/icons/menu.svg" alt="hamburgermenu">
+            <div class="center">
+                <img class="margin_r_8 rotate icon_16" src="assets/img/icons/arrow-orange.png" alt="arrow-left">
+                <img class="icon_32" src="assets/img/icons/logo_liefercando-no-txt.png" alt="logo liefercando">
+            </div>
+
+            <p class="t-align"><b>Speisekarte</b></p>
+            
+            <div class="h_menu_right">
+                <div class="d-none center icon_48">
+                    <img class="cicle icon_24" src="assets/img/german.png" alt="german">
+                </div>
+                <div class="center icon_48">    
+                    <img class="icon_24" src="assets/img/icons/menu.svg" alt="hamburgermenu">
+                </div>
+            </div>
         </div>
 
         <div>
             <img class="h_img" src="assets/img/pizza-rastaurant.jpg" alt="restaurant pizza">
-
+            
             <div class="h_restaurant">
                 <div class="h_restaurant_logo">
                     <div class="icon_64">
@@ -32,7 +44,7 @@
                 <div class="h_resturant_card">
                     <div class="h_rest_left">
                         <h2>Pizza Flizza</h1>
-                        <div>
+                        <div class="h_rest_evaluation">
                             <div>
                                 <img class="icon_20" src="assets/img/star-2-48.png" alt="star full">
                                 <img class="icon_20" src="assets/img/star-2-48.png" alt="star full">
@@ -40,7 +52,11 @@
                                 <img class="icon_20" src="assets/img/star-5-48.png" alt="star emty">
                                 <img class="icon_20" src="assets/img/star-5-48.png" alt="star emty">
                             </div>
-                            <a>1.2k Bewertungen</a>
+                            <a class="t_underline t_14">1.2k Bewertungen</a>
+                            <div class="h_res_delivery">
+                                <img class="margin_r_8 icon_16" src="assets/img/icons/clock-red.png" alt="no time">
+                                <p class="t_alert t_14">Momentan keine Lieferung</p>
+                            </div>
                         </div>
                     </div>
 
