--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         </div>
     </header>
 
+    <nav>
+        <img src="" alt="">
+
+        <div></div>
+    </nav>
+
     <div>
         <aside></aside>
    
