init main & nav

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
                     <div class="h_res_right">
 
-                    <a class="cicle_48"><img class="icon_24" src="assets/img/icons/info.svg" alt="info"></a>
-                    
-                    <a class="cicle_48"><img class="icon_24" src="assets/img/icons/favorite.svg" alt="favorite"></a>
+                    <a class="center cicle_48"><img class="icon_24" src="assets/img/icons/info.svg" alt="info"></a>
+
+                    <a class="center cicle_48"><img class="icon_24" src="assets/img/icons/favorite.svg" alt="favorite"></a>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,9 @@
     </header>
 
     <nav>
-        <img src="" alt="">
+        <div class="center cicle_32 ">
+            <img class="icon_24" src="assets/img/icons/search.svg" alt="search">
+        </div>
 
         <div></div>
     </nav>
