--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="h_info_restaurant">
             <img class="h_img" src="assets/img/pizza-rastaurant.jpg" alt="restaurant pizza">
             
             <div class="h_restaurant">
@@ -79,7 +79,7 @@
             <img class="icon_24" src="assets/img/icons/search.svg" alt="search">
         </div>
 
-        <div></div>
+        <div id="navbar"></div>
     </nav>
 
     <div>
