--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liefercando</title>
 
+    <link rel="icon" type="image/vnd.microsoft.icon" href="assets/img/icons/favicon_liefercando.ico"/>
+
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
