--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div>
         <aside></aside>
    
-        <main></main> 
+        <main id="main"></main> 
     </div>
 
     <footer></footer>
