--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="assets/js/json.js"></script>
     <script src="assets/js/scipt.js"></script>
     <script src="assets/js/templates.js"></script>
+    <script src="assets/js/support.js"></script>
 </head>
 <body onload="render()">
 
