--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
     </header>
 
     <nav>
-        <div class="center cicle_32">
+        <div class="center cicle_32 margin_r_8">
             <img class="icon_24" src="assets/img/icons/search.svg" alt="search">
         </div>
 
-        <div id="navbar"></div>
+        <div id="navbar"></div> <!--todo style scrollbar, sticky -->
     </nav>
 
     <div>
