--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 
                             <a class="t_underline t_14">1.2k Bewertungen</a>
 
+                            <div class="h_rest_prerequisite center margin_t_8">
+                                <img class="icon_16 margin_r_8" src="assets/img/icons/history.svg" alt="opening">
+                                <p class="t_14 margin_r_8">Ab 9:30</p>
+                                <p class="margin_r_8">&#149;</p>
+                                <img class="icon_16 margin_r_8" src="assets/img/icons/pedal_bike.svg" alt="delivery tip">
+                                <p class="t_14 margin_r_8">1,90 €</p>
+                                <p class="margin_r_8">&#149;</p>
+                                <img class="icon_16 margin_r_8" src="assets/img/icons/local_mall.svg" alt="minimum order value">
+                                <p class="t_14 margin_r_8">15,00 €</p>
+                            </div>
+
                             <div class="h_res_delivery">
                                 <img class="margin_r_8 icon_16" src="assets/img/icons/clock-red.png" alt="no time">
                                 <p class="t_alert t_14">Momentan keine Lieferung</p>
@@ -94,6 +105,19 @@
         <main id="main"></main> 
     </div>
 
-    <footer></footer>
+    <footer>
+        <div class="footer_legal">
+            <a class="padding_t_b_12 t_14">Ein Resstaurant empfehlen</a>
+            <a class="padding_t_b_12 t_14">Ein Restaurant anmelden</a>
+            <a class="padding_t_b_12 t_14">Jobs</a>
+            <a class="padding_t_b_12 t_14">AGB</a>
+            <a class="padding_t_b_12 t_14">Datenschutzerklärung</a>
+            <a class="padding_t_b_12 t_14">Impressum</a>
+            <a class="padding_t_b_12 t_14">Verwendung von Cookies</a>
+            <a class="padding_t_b_12 t_14">Bug Bounty</a>
+            <a class="padding_t_b_12 t_14">Ethik-Hotline</a>
+        </div>
+        <a class="copyright t_14">© 2023 Mathias Kohler</a>
+    </footer>
 </body>
 </html>
