fix style prerequisite

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                             <a class="t_underline t_14">1.2k Bewertungen</a>
 
                             <div class="h_rest_prerequisite center margin_t_8">
-                                <img class="icon_16 margin_r_8" src="assets/img/icons/history.svg" alt="opening">
-                                <p class="t_14 margin_r_8">Ab 9:30</p>
-                                <p class="margin_r_8">&#149;</p>
-                                <img class="icon_16 margin_r_8" src="assets/img/icons/pedal_bike.svg" alt="delivery tip">
-                                <p class="t_14 margin_r_8">1,90 €</p>
-                                <p class="margin_r_8">&#149;</p>
-                                <img class="icon_16 margin_r_8" src="assets/img/icons/local_mall.svg" alt="minimum order value">
-                                <p class="t_14 margin_r_8">15,00 €</p>
+                                <img class="icon_16" src="assets/img/icons/history.svg" alt="opening">
+                                <p class="t_14">Ab 9:30</p>
+                                <p >&#149;</p>
+                                <img class="icon_16" src="assets/img/icons/pedal_bike.svg" alt="delivery tip">
+                                <p class="t_14">1,90 €</p>
+                                <p>&#149;</p>
+                                <img class="icon_16" src="assets/img/icons/local_mall.svg" alt="minimum order value">
+                                <p class="t_14">15,00 €</p>
                             </div>
 
                             <div class="h_res_delivery">
