responsiv 720px header-menu

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
     <header>
         <div class="h_menu">
-            <img class="d-none h_icon" src="assets/img/icons/logo_liefercando.png" alt="logo liefercando text">
+            <img class="h_menu_logo-text heigth_32" src="assets/img/icons/logo_liefercando.png" alt="logo liefercando text">
             
             <div class="center">
-                <img class="margin_r_8 rotate icon_16" src="assets/img/icons/arrow-orange.png" alt="arrow-left">
-                <img class="icon_32" src="assets/img/icons/logo_liefercando-no-txt.png" alt="logo liefercando">
+                <img class="h_menu_logo-arrow margin_r_8 rotate icon_16" src="assets/img/icons/arrow-orange.png" alt="arrow-left">
+                <img class="h_menu_logo icon_32" src="assets/img/icons/logo_liefercando-no-txt.png" alt="logo liefercando">
             </div>
 
             <p class="t-align"><b>Speisekarte</b></p>
             
             <div class="h_menu_right">
-                <div class="d-none center icon_48">
+                <div class="h_menu_select_lang center icon_48">
                     <img class="cicle icon_24" src="assets/img/german.png" alt="german">
                 </div>
 
