responsiv header_menu complete

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
     <header>
         <div class="h_menu">
-            <img class="h_menu_logo-text heigth_32" src="assets/img/icons/logo_liefercando.png" alt="logo liefercando text">
             
-            <div class="center">
+            <div class="h_menu_left center">
                 <img class="h_menu_logo-arrow margin_r_8 rotate icon_16" src="assets/img/icons/arrow-orange.png" alt="arrow-left">
+                <img class="h_menu_logo-text heigth_32" src="assets/img/icons/logo_liefercando.png" alt="logo liefercando text">
                 <img class="h_menu_logo icon_32" src="assets/img/icons/logo_liefercando-no-txt.png" alt="logo liefercando">
             </div>
 
-            <p class="t-align"><b>Speisekarte</b></p>
+            <p class="h_menu_center t-align"><b>Speisekarte</b></p>
             
             <div class="h_menu_right">
                 <div class="h_menu_select_lang center icon_48">
