--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     </nav>
 
     <div>
-        <aside></aside>
-   
         <main id="main"></main> 
+        
+        <aside class="bucket"></aside>
     </div>
 
     <footer>
