responsiv header nav main >1340px

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                 </div>
             </nav>
     
-            <main id="main"></main> 
+            <main>
+                <div id="main"></div>
+            </main> 
         </div>
         
         <aside class="bucket">
