--- a/index.html
+++ b/index.html
@@ -119,17 +119,37 @@
 
     <footer>
         <div class="footer_legal">
-            <a class="padding_t_b_12 t_14">Ein Resstaurant empfehlen</a>
-            <a class="padding_t_b_12 t_14">Ein Restaurant anmelden</a>
-            <a class="padding_t_b_12 t_14">Jobs</a>
-            <a class="padding_t_b_12 t_14">AGB</a>
-            <a class="padding_t_b_12 t_14">Datenschutzerklärung</a>
-            <a class="padding_t_b_12 t_14">Impressum</a>
-            <a class="padding_t_b_12 t_14">Verwendung von Cookies</a>
-            <a class="padding_t_b_12 t_14">Bug Bounty</a>
-            <a class="padding_t_b_12 t_14">Ethik-Hotline</a>
+            <div class="padding_8_12px">
+                <a class="t_14">Ein Resstaurant empfehlen</a>
+            </div>
+            <div class="padding_8_12px">
+                <a class="t_14">Ein Restaurant anmelden</a>
+            </div>
+            <div class="padding_8_12px">
+                <a class="t_14">Jobs</a>
+            </div>
+            <div class="padding_8_12px">
+                <a class="t_14">AGB</a>
+            </div>
+            <div class="padding_8_12px">
+                <a class="t_14">Datenschutzerklärung</a>
+            </div>
+            <div class="padding_8_12px">
+                <a class="t_14">Impressum</a>
+            </div>
+            <div class="padding_8_12px">
+                <a class="t_14">Verwendung von Cookies</a>
+            </div>
+            <div class="padding_8_12px">
+                <a class="t_14">Bug Bounty</a>
+            </div>
+            <div class="padding_8_12px">
+                <a class="t_14">Ethik-Hotline</a>
+            </div>
         </div>
-        <a class="copyright t_14">© 2023 Mathias Kohler</a>
+        <div class="padding_8_12px">
+            <a class="copyright t_14">© 2023 Mathias Kohler</a>
+        </div>
     </footer>
 </body>
 </html>
