fix responsiv bucket width

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         </div>
         
         <aside class="bucket">
-            <h3>Warenkorb</h3>
+            <h3 class="title">Warenkorb</h3>
+            <div id="bucket"></div>
         </aside>
     </section>
 
