rename bucket -> basket

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </main> 
         </div>
         
-        <aside class="bucket">
+        <aside class="basket">
             <h3 class="title">Warenkorb</h3>
             <div id="bucket-list"></div>
         </aside>
