rename bucket -> basket

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         
         <aside class="basket">
             <h3 class="title">Warenkorb</h3>
-            <div id="bucket-list"></div>
+            <div id="basket-list"></div>
         </aside>
     </section>
 
