--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <aside class="basket">
             <h3 class="title">Warenkorb</h3>
             <div id="basket-list"></div>
+            <div id="basket-invoice"></div>
         </aside>
     </section>
 
