--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </aside>
     </section>
 
-    <footer>
+    <footer class="footer_margin_btn">
         <div class="footer_legal">
             <div class="padding_8_12px">
                 <a class="t_14 effekt_t_deco-underline">Ein Resstaurant empfehlen</a>
@@ -153,5 +153,9 @@
             <a class="copyright cursor_default t_14">© 2023 Mathias Kohler</a>
         </div>
     </footer>
+
+    <section class="open_Basket">
+        <button class="basket_btn"><b>Bezahlen (${FullPrice})</b></button>
+    </section>
 </body>
 </html>
