--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </aside>
     </section>
 
-    <footer class="footer_margin_btn">
+    <footer id="footer">
         <div class="footer_legal">
             <div class="padding_8_12px">
                 <a class="t_14 effekt_t_deco-underline">Ein Resstaurant empfehlen</a>
@@ -154,8 +154,8 @@
         </div>
     </footer>
 
-    <section class="open_Basket">
-        <button class="basket_btn"><b>Bezahlen (${FullPrice})</b></button>
+    <section id="basket_mobile_btn_section" class="open_Basket">
+        <button id="basket_mobile_btn" onclick="openBasket()" class="basket_btn"><b>Bezahlen (${FullPrice})</b></button>
     </section>
 </body>
 </html>
