--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="assets/js/templates.js"></script>
     <script src="assets/js/support.js"></script>
 </head>
-<body onload="render()">
+<body id="body" onload="render()">
 
     <header>
         <div class="h_menu">
