--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                                         <p class="t_14">15,00 €</p>
                                     </div>
             
-                                    <div class="h_res_delivery">
+                                    <!-- <div class="h_res_delivery">
                                         <img class="margin_r_8 icon_16" src="assets/img/icons/clock-red.png" alt="no time">
                                         <p class="t_alert t_14">Momentan keine Lieferung</p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
             
